logs/cost_report.log
[2026-03-05 22:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-05 23:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 00:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 01:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 02:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 03:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 04:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 05:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 06:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 07:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 08:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 09:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 10:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 11:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 12:00] Generating cost report...
Error: [Errno 2] No such file or directory: 'ollama'
Cost report complete.
[2026-03-06 13:00] Generating cost report...
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "/Users/daytrons/.openclaw/workspace/scripts/ollama_handlers.py", line 16
    cmd = ["/opt/homebrew/bin/ollama"], "run", OLLAMA_MODEL]
                                                           ^
SyntaxError: unmatched ']'
Cost report complete.
[2026-03-06 14:00] Generating cost report...
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "/Users/daytrons/.openclaw/workspace/scripts/ollama_handlers.py", line 16
    cmd = ["/opt/homebrew/bin/ollama"], "run", OLLAMA_MODEL]
                                                           ^
SyntaxError: unmatched ']'
Cost report complete.
[2026-03-06 15:00] Generating cost report...
"Total: $0.07 | Model: $0.035 (minimax) | Efficiency: 83.33%"
Cost report complete.
[2026-03-06 16:00] Generating cost report...
Here is a concise 2-line summary:

"Total: $0.07 | Model: $0.035 ($0.03/min) | Efficiency: 33.33%"
Cost report complete.
[2026-03-06 17:00] Generating cost report...
"Total: $0.07 | Model: $0.05 (kimi) / $0.03 (minimax)"
Cost report complete.
[2026-03-06 18:00] Generating cost report...
Here is a 2-line summary:

"Total: $0.07 | Model: $0.04 (kimi) + $0.03 (minimax) = $0.07" 
"Efficiency: $0.07 (total) / $0.07 (total) = 100.00%"
Cost report complete.
[2026-03-06 19:00] Generating cost report...
"Total: $0.07 | Model: $0.03-$0.04 | Efficiency: 67%"
Cost report complete.
[2026-03-06 20:00] Generating cost report...
Here is a 2-line summary:

"Total: $0.07 | Model: $0.05 (kimi: $0.04, minimax: $0.01)"
Cost report complete.
[2026-03-06 21:00] Generating cost report...
Error: Command '['/opt/homebrew/bin/ollama', 'run', 'llama3.2:latest']' timed out after 30 seconds
Cost report complete.
[2026-03-06 22:00] Generating cost report...
Error: Command '['/opt/homebrew/bin/ollama', 'run', 'llama3.2:latest']' timed out after 30 seconds
Cost report complete.
[2026-03-06 23:00] Generating cost report...
Error: Command '['/opt/homebrew/bin/ollama', 'run', 'llama3.2:latest']' timed out after 30 seconds
Cost report complete.
[2026-03-07 00:00] Generating cost report...
Error: Command '['/opt/homebrew/bin/ollama', 'run', 'llama3.2:latest']' timed out after 30 seconds
Cost report complete.
[2026-03-07 01:00] Generating cost report...
"Total: $0.07 | Model: $0.035 (kimi) / $0.025 (minimax) | Efficiency: 57.14%"
Cost report complete.
